[tool.poetry]
name = "skeleton_flask"
version = "0.1.0"
description = ""
authors = ["Rauan Akylzhanov <akylzhanov.r@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask-Login = "0.6.2"
Flask-OpenID = "^1.3.0"
Flask-Mail = "^0.9.1"
Flask-Babel = "^2.0.0"
Jinja2 = "^3.1.2"
MarkupSafe = "2.1.1"
guess-language = "0.2"
Flask-WTF = "0.14.2"
WTForms = "2.0.1"
Werkzeug = "2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
